--- a/CSS/main.css
+++ b/CSS/main.css
@@ -16,7 +16,7 @@ nav {
 }
 
 .navbar-brand {
-    font-size: 25px;
+    font-size: 2.5rem;
 }
 
 .nav-item:hover {
@@ -25,4 +25,16 @@ nav {
 
 body {
     background-color: rgb(219, 144, 156);
+}
+
+.container {
+    margin-top: 100px;
+    margin-left: 50px;
+    border: 2px solid black;
+    background-color: white;
+    float: left;
+}
+
+button {
+    margin-bottom: 20px
 }
