--- a/CSS/main.css
+++ b/CSS/main.css
@@ -32,7 +32,7 @@ body {
     margin-left: 50px;
     border: 2px solid black;
     background-color: white;
-    float: left;
+    /* float: left; */
 }
 
 button {
