--- a/CSS/main.css
+++ b/CSS/main.css
@@ -23,6 +23,7 @@ nav {
     text-decoration: underline;
 }
 
+/* General Body Styling */
 body {
     background-color: rgb(219, 144, 156);
 }
@@ -30,11 +31,12 @@ body {
 .container {
     margin-top: 100px;
     margin-left: 50px;
+    margin-bottom: 200px;
     border: 2px solid black;
     background-color: white;
-    /* float: left; */
 }
 
+/* Footer Styling */
 footer {
     border: 2px solid black;
 }
