--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,3 +1,10 @@
 button {
     margin-bottom: 20px
 }
+
+.contactForm {
+    margin-top: 100px;
+    margin-bottom: 200px;
+    border: 2px solid black;
+    background-color: white; 
+}
