--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -3,3 +3,10 @@ img {
     margin: 10px;
 }
 
+
+.portfolio {
+    margin-top: 100px;
+    margin-bottom: 200px;
+    border: 2px solid black;
+    background-color: white;
+} 
