--- a/CSS/main.css
+++ b/CSS/main.css
@@ -28,6 +28,13 @@ body {
     background-color: rgb(219, 144, 156);
 }
 
+.mainBody {
+    margin-top: 100px;
+    margin-bottom: 200px;
+    border: 2px solid black;
+    background-color: white; 
+}
+
 /* Footer Styling */
 footer {
     border: 2px solid black;
