Portfolio Page Updates

--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -1,6 +1,6 @@
 
-.img {
-    margin: 10px;
-    height: 300px;
-    width: 300px;
+.link {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
 }
