--- a/CSS/main.css
+++ b/CSS/main.css
@@ -31,3 +31,11 @@ footer {
     border: 2px solid black;
 }
 
+@media screen and (max-width: 415px) {
+
+    span {
+        display: block;
+    }
+
+}
+
