--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -17,6 +17,12 @@
     color: black;
 }
 
+.portEntry {
+    margin-top: 100px;
+    padding: 20px 0px;
+    border: 2px solid rgb(109, 98, 98);
+    background-color: white; 
+}
 
 @media screen and (max-width: 334px) {
 
