--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -22,6 +22,12 @@
     padding: 20px 0px;
     border: 2px solid rgb(109, 98, 98);
     background-color: white; 
+    width: 75%;
+}
+
+img {
+    width: 100%;
+    justify-self: center;
 }
 
 @media screen and (max-width: 334px) {
